--- a/pages/index.css
+++ b/pages/index.css
@@ -4,8 +4,8 @@
 
 
 .page {
-    width: 1200px;
-    height: 2000px;
+    width: 320px;
+    min-height: 200px;
     margin: auto;
 }
 
@@ -13,7 +13,8 @@
 .header__title {
     font-family: 'Inter', Arial, sans-serif;
     color: #fff;
-    margin: 0;
+    margin: 0 0 0 25px;
+    font-size: 28px;
 }
 
 .header {
@@ -24,7 +25,8 @@
 
 .menu-popup {
     width: 100%;
-    height: 200px;
+    height: 100px;
+    border-bottom: 1px solid black;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -35,18 +37,10 @@
     margin: auto;
 }
 
-.menu-popup__name {
+.menu-popup-div {
     width: 20px;
     height: 20px;
-    border: 1px solid black;
-    border-radius: 35%;
-}
-
-.menu-popup__foto {
-    width: 20px;
-    height: 20px;
-    border: 1px solid black;
-    border-radius: 35%;
+    cursor: pointer;
 }
 
 .popup {
@@ -65,7 +59,7 @@
 
 .popup__block {
     position: relative;
-    width: 430px;
+    width: 300px;
     height: 350px;
     background-color: #fff;
     border-radius: 20px;
@@ -74,7 +68,7 @@
 
 .popup__box {
     margin: 0 auto;
-    width: 358px;
+    width: 280px;
     height: 280px;
 }
 
@@ -85,7 +79,7 @@
 
 .popup__input {
     font-family: 'Inter', Arial, sans-serif;
-    width: 358px;
+    width: 280px;
     border: none;
     font-size: 14px;
     font-weight: 400;
@@ -96,26 +90,42 @@
 
 .popup__span {
     display: block;
-    width: 358px;
+    width: 280px;
     height: 30px;
 }
 
 .popup__button {
-    margin-top: 30px;
-    width: 358px;
-    height: 55px;
+    margin-top: 25px;
+    width: 280px;
+    height: 50px;
     border-radius: 10px;
-    border: 1px solid black;
     background-color: rgb(0, 0, 0);
     color: #fff;
     font-family: 'Inter', Arial, sans-serif;
+    cursor: pointer;
 }
 
 .popup__button-close {
-    width: 20px;
-    height: 20px;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
     position: absolute;
     top: 170px;
-    right: 250px;
-    margin: auto;
+    right: 10px;
+    cursor: pointer;
+}
+
+.about {
+    width: 320px;
+}
+
+.about__title {
+    font-family: 'Inter', Arial, sans-serif;
+    font-size: 30px;
+    padding: 0 0 0 10px;
+}
+
+.about__job {
+    font-family: 'Inter', Arial, sans-serif;
+    font-size: 18px; 
+    padding-left: 10px;
 }
