--- a/pages/index.css
+++ b/pages/index.css
@@ -183,10 +183,48 @@
     font-size: 14px;
 }
 
-/* .form__input:valid {
-    border-bottom: 1px solid green;
+.glaoerea-photo {
+    display: grid;
+    margin: 0 auto 20px;
+    width: 320px;
+    grid-template-columns: 320px;
+    gap: 25px;
+    padding: 0;
+    background-color: #fff;
 }
 
-.form__input:invalid {
-    border-bottom: 1px solid red;
-} */
+.popup__foto {
+    margin: auto;
+}
+
+.popup__imag {
+    width: 288px;
+    height: 250px;
+    margin: auto;
+    padding: 0;
+    background: url(../images/kirill-pershin-zak.jpg);
+}
+
+.popup__title-name {
+    font-family: 'Inter', Arial, sans-serif;
+    margin: 0;
+    padding: 10px 0 0;
+}
+
+.popup-foto__box {
+    width: 290px;
+    margin: 200px auto;
+    position: relative;
+}
+
+.img__popup {
+    width: 100%;
+    height: 300px;
+}
+
+.name__popup {
+    font-family: 'Inter', Arial, sans-serif;
+    font-size: 14px;
+    margin: 5px 0 0;
+    color: #fff
+}
